first dto structures added going to clean and develop

--- a/src/main/resources/config/images.properties
+++ b/src/main/resources/config/images.properties
@@ -11,3 +11,24 @@ invisiblepotion = /power/invisiblepotion.png
 speedpotion = /power/speedpotion.png
 speedbomb = /power/speedbomb.png
 tntbomb = /power/tntbomb.png
+backgroundTile0 = /backgroundtiles/tile0.png
+backgroundTile1 = /backgroundtiles/tile1.png
+pipe = /pipe/PipeB.png
+goomba = /enemy/GoombaR.png
+koopa = /enemy/KoopaR.png
+broth = /enemy/broth.png
+plant = /enemy/Plant.png
+spiny = /enemy/SpinyR.png
+
+bullet = /item/bullet.png
+checkpoint = /item/checkpoint.png
+flower = /item/flower.png
+mushroom = /item/mushroom.png
+star = /item/star.png
+sward = /item/swardright.png
+
+emptyblock = /block/EmptyBlock.png
+questionblock = /block/QuestionBlock.png
+simpleblock = /block/SimpleBlock.png
+coinblock = /block/SimpleBlock.png
+fullcoinblock = /block/SimpleBlock.png
