code is claen for now :)

--- a/src/main/resources/config/images.properties
+++ b/src/main/resources/config/images.properties
@@ -1,7 +1,22 @@
-mario = /player/MarioRight1.png
-mario2 = /player/MarioRight2.png
-mario3 = /player/MarioRight1.png
-mario4 = /player/MarioRight1.png
+marioright1 = /player/MarioRight1.png
+marioright2 = /player/MarioRight2.png
+marioleft1 = /player/MarioLeft1.png
+marioleft2 = /player/MarioLeft2.png
+mariojumpright = /player/MarioJumpRight.png
+
+megamarioright1 = /player/MegaMarioRight1.png
+megamarioright2 = /player/MegaMarioRight2.png
+megamarioleft1 = /player/MegaMarioLeft1.png
+megamarioleft2 = /player/MegaMarioLeft2.png
+megamariojumpright = /player/MegaMarioJumpRight.png
+
+
+firemarioright1 = /player/FireMarioRight1.png
+firemarioright2 = /player/FireMarioRight2.png
+firemarioleft1 = /player/FireMarioLeft1.png
+firemarioleft2 = /player/FireMarioLeft2.png
+firemariojumpright = /player/FireMarioJumpRight.png
+
 mario5 = /player/MarioRight2.png
 coin = /item/coin.png
 diamond = /item/diamond.png
