--- a/src/main/resources/config/images.properties
+++ b/src/main/resources/config/images.properties
@@ -25,7 +25,7 @@ healthpotion = /power/healthpotion.png
 invisiblepotion = /power/invisiblepotion.png
 speedpotion = /power/speedpotion.png
 speedbomb = /power/speedbomb.png
-tntbomb = /power/tntbomb.png
+damagebomb = /power/damagebomb.png
 backgroundTile0 = /backgroundtiles/tile0.png
 backgroundTile1 = /backgroundtiles/tile1.png
 pipe = /pipe/PipeB.png
