--- a/src/main/resources/config/images.properties
+++ b/src/main/resources/config/images.properties
@@ -47,3 +47,6 @@ questionblock = /block/QuestionBlock.png
 simpleblock = /block/SimpleBlock.png
 coinblock = /block/SimpleBlock.png
 fullcoinblock = /block/SimpleBlock.png
+
+back = /BackGround.png
+back2 = /back2.jpg
