code is clean for now

--- a/src/main/resources/config/images.properties
+++ b/src/main/resources/config/images.properties
@@ -1,31 +1,31 @@
-marioright1 = /player/MarioRight1.png
-marioright2 = /player/MarioRight2.png
-marioleft1 = /player/MarioLeft1.png
-marioleft2 = /player/MarioLeft2.png
-mariojumpright = /player/MarioJumpRight.png
+marioRight1 = /player/MarioRight1.png
+marioRight2 = /player/MarioRight2.png
+marioLeft1 = /player/MarioLeft1.png
+marioLeft2 = /player/MarioLeft2.png
+marioJumpRight = /player/MarioJumpRight.png
 
-megamarioright1 = /player/MegaMarioRight1.png
-megamarioright2 = /player/MegaMarioRight2.png
-megamarioleft1 = /player/MegaMarioLeft1.png
-megamarioleft2 = /player/MegaMarioLeft2.png
-megamariojumpright = /player/MegaMarioJumpRight.png
+megaMarioRight1 = /player/MegaMarioRight1.png
+megaMarioRight2 = /player/MegaMarioRight2.png
+megaMarioLeft1 = /player/MegaMarioLeft1.png
+megaMarioLeft2 = /player/MegaMarioLeft2.png
+megaMarioJumpRight = /player/MegaMarioJumpRight.png
 
 
-firemarioright1 = /player/FireMarioRight1.png
-firemarioright2 = /player/FireMarioRight2.png
-firemarioleft1 = /player/FireMarioLeft1.png
-firemarioleft2 = /player/FireMarioLeft2.png
-firemariojumpright = /player/FireMarioJumpRight.png
+fireMarioRight1 = /player/FireMarioRight1.png
+fireMarioRight2 = /player/FireMarioRight2.png
+fireMarioLeft1 = /player/FireMarioLeft1.png
+fireMarioLeft2 = /player/FireMarioLeft2.png
+fireMarioJumpRight = /player/FireMarioJumpRight.png
 
 mario5 = /player/MarioRight2.png
 coin = /item/coin.png
 diamond = /item/diamond.png
 hammer = /power/hammer.png
-healthpotion = /power/healthpotion.png
-invisiblepotion = /power/invisiblepotion.png
-speedpotion = /power/speedpotion.png
-speedbomb = /power/speedbomb.png
-damagebomb = /power/damagebomb.png
+healthPotion = /power/healthpotion.png
+invisibilityPotion = /power/invisibilitypotion.png
+speedPotion = /power/speedpotion.png
+speedBomb = /power/speedbomb.png
+damageBomb = /power/damagebomb.png
 backgroundTile0 = /backgroundtiles/tile0.png
 backgroundTile1 = /backgroundtiles/tile1.png
 pipe = /pipe/PipeB.png
@@ -42,11 +42,11 @@ mushroom = /item/mushroom.png
 star = /item/star.png
 sward = /item/swardright.png
 
-emptyblock = /block/EmptyBlock.png
-questionblock = /block/QuestionBlock.png
-simpleblock = /block/SimpleBlock.png
-coinblock = /block/SimpleBlock.png
-fullcoinblock = /block/SimpleBlock.png
+EmptyBlock = /block/EmptyBlock.png
+QuestionBlock = /block/QuestionBlock.png
+SimpleBlock = /block/SimpleBlock.png
+CoinBlock = /block/SimpleBlock.png
+FullCoinBlock = /block/SimpleBlock.png
 
 back = /BackGround.png
 back2 = /back2.jpg
