buy ui improved and buy request response added

--- a/src/main/resources/config/images.properties
+++ b/src/main/resources/config/images.properties
@@ -18,14 +18,14 @@ fireMarioLeft2 = /player/FireMarioLeft2.png
 fireMarioJumpRight = /player/FireMarioJumpRight.png
 
 mario5 = /player/MarioRight2.png
-coin = /item/coin.png
-diamond = /item/diamond.png
-hammer = /power/hammer.png
-healthPotion = /power/healthpotion.png
-invisibilityPotion = /power/invisibilitypotion.png
-speedPotion = /power/speedpotion.png
-speedBomb = /power/speedbomb.png
-damageBomb = /power/damagebomb.png
+Coin = /item/coin.png
+Diamond = /item/diamond.png
+Hammer = /power/hammer.png
+HealthPotion = /power/healthpotion.png
+InvisibilityPotion = /power/invisibilitypotion.png
+SpeedPotion = /power/speedpotion.png
+SpeedBomb = /power/speedbomb.png
+DamageBomb = /power/damagebomb.png
 backgroundTile0 = /backgroundtiles/tile0.png
 backgroundTile1 = /backgroundtiles/tile1.png
 pipe = /pipe/PipeB.png
@@ -40,7 +40,7 @@ checkpoint = /item/checkpoint.png
 flower = /item/flower.png
 mushroom = /item/mushroom.png
 star = /item/star.png
-sward = /item/swardright.png
+Sward = /item/swardright.png
 
 EmptyBlock = /block/EmptyBlock.png
 QuestionBlock = /block/QuestionBlock.png
