shop and room ui improved

--- a/src/main/resources/config/images.properties
+++ b/src/main/resources/config/images.properties
@@ -18,7 +18,7 @@ fireMarioLeft2 = /player/FireMarioLeft2.png
 fireMarioJumpRight = /player/FireMarioJumpRight.png
 
 mario5 = /player/MarioRight2.png
-Coin = /item/coin.png
+coin = /item/coin.png
 Diamond = /item/diamond.png
 Hammer = /power/hammer.png
 HealthPotion = /power/healthpotion.png
